fix dumb actions container spacing

--- a/Assets/styles/forum.css
+++ b/Assets/styles/forum.css
@@ -26,6 +26,7 @@
 .comment-content {
   margin: 0;
   padding: 5px;
+  width: 90%;
   display: block;
 }
 
